# MAC-Multi-Agent-Constitution-Learning

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  art.txt  pyproject.toml
docs/: api-reference.md  model-configuration.md  paper-results.md  usage-modes.md
examples/: gsm8k_adapt.py  gsm8k_custom.py  hotpotqa_adapt.py  hotpotqa_custom.py  hover_adapt.py  hover_custom.py  mini_test.py
figures/: gen_benchmark_plots.py
mac/: __init__.py  agents.py  art.txt  batch_processor.py  cli.py  compiled.py  constitution.py  display.py  epoch_pipeline.py  example.py  io.py  phrase_matching_evaluator.py  phrase_utils.py  plotting.py  prompt_adaptation.py  run_management.py  scoring.py
mac/prompts/: annotator.md  decision_agent.md  rule_editor.md  rule_proposer.md
